--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -56,5 +56,6 @@
    },
  });
 </script>
-
+{% if jekyll.environment == "production" %}
 <script src="https://cdn.usefathom.com/script.js" site="OPNDVMZW" defer></script>
+{% endif %}
