Use advanced Fathom Analytics

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,5 +57,5 @@
  });
 </script>
 {% if jekyll.environment == "production" %}
-<script src="https://cdn.usefathom.com/script.js" site="OPNDVMZW" defer></script>
+<script src="https://save-tonight-lights.b-cdn.net/script.js" data-site="OPNDVMZW" defer></script>
 {% endif %}
