Re-add missing <title>

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -12,4 +12,5 @@
   <meta name="msapplication-TileColor" content="#00aba9">
   <meta name="msapplication-config" content="/favicons/browserconfig.xml?v=KmnEPe0ybr">
   <meta name="theme-color" content="#ffffff">
+  <title>{{ title | escape }}</title>
 </head>
