Upgrade things to patch CVEs

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+  <data class="u-url" href="/"></data>
 
   <div class="wrapper">
 
@@ -17,7 +17,7 @@
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
-          <li><a href="https://github.com/raxod502"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg> <span class="username">raxod502</span></a></li>
+          <li><a href="https://github.com/raxod502"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">raxod502</span></a></li>
         </ul>
       </div>
 
