--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{{ "/css/main.css" | relative_url }}">
+  <link rel="stylesheet" href="/css/main.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png?v=KmnEPe0ybr">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png?v=KmnEPe0ybr">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png?v=KmnEPe0ybr">
