--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header" role="banner">
 
   <div class="wrapper">
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">Intuitive Explanations</a>
+    <a class="site-title" rel="author" href="/">Intuitive Explanations</a>
 
     <nav class="site-nav">
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
