--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  {%- include head.html -%}
+  {%- include "head.html" -%}
   <body>
-    {%- include header.html -%}
+    {%- include "header.html" -%}
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
       </div>
     </main>
-    {%- include footer.html -%}
+    {%- include "footer.html" -%}
   </body>
 </html>
