--- a/css/replit.css
+++ b/css/replit.css
@@ -1,32 +1,57 @@
 /* Based on https://codepen.io/harmputman/pen/IpAnb */
 
+/* https://google-webfonts-helper.herokuapp.com/ */
+
+/* prettier-ignore */
 @font-face {
-  font-family: "PT Sans";
+  font-family: 'PT Sans';
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/ptsans/v12/jizaRExUiTo99u79D0KEwA.ttf)
-    format("truetype");
+  src: url('/fonts/pt-sans-v17-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/pt-sans-v17-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/pt-sans-v17-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/pt-sans-v17-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/pt-sans-v17-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/pt-sans-v17-latin-regular.svg#PTSans') format('svg'); /* Legacy iOS */
 }
+
+/* prettier-ignore */
 @font-face {
-  font-family: "Ubuntu";
+  font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 300;
-  src: url(https://fonts.gstatic.com/s/ubuntu/v15/4iCv6KVjbNBYlgoC1CzjsGyI.ttf)
-    format("truetype");
+  src: url('/fonts/ubuntu-v20-latin-300.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/ubuntu-v20-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/ubuntu-v20-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/ubuntu-v20-latin-300.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/ubuntu-v20-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/ubuntu-v20-latin-300.svg#Ubuntu') format('svg'); /* Legacy iOS */
 }
+
+/* prettier-ignore */
 @font-face {
-  font-family: "Ubuntu";
+  font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/ubuntu/v15/4iCs6KVjbNBYlgoKfw7z.ttf)
-    format("truetype");
+  src: url('/fonts/ubuntu-v20-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/ubuntu-v20-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/ubuntu-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/ubuntu-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/ubuntu-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/ubuntu-v20-latin-regular.svg#Ubuntu') format('svg'); /* Legacy iOS */
 }
+
+/* prettier-ignore */
 @font-face {
-  font-family: "Ubuntu";
+  font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 700;
-  src: url(https://fonts.gstatic.com/s/ubuntu/v15/4iCv6KVjbNBYlgoCxCvjsGyI.ttf)
-    format("truetype");
+  src: url('/fonts/ubuntu-v20-latin-700.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/ubuntu-v20-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/ubuntu-v20-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/ubuntu-v20-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/ubuntu-v20-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/ubuntu-v20-latin-700.svg#Ubuntu') format('svg'); /* Legacy iOS */
 }
 
 blockquote.replit {
