Update email address

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -11,7 +11,7 @@
           <li class="p-name">
             Radon Rosborough
           </li>
-          <li><a class="u-email" href="mailto:radon.neon@gmail.com">radon.neon@gmail.com</a></li>
+          <li><a class="u-email" href="mailto:radon@intuitiveexplanations.com">radon@intuitiveexplanations.com</a></li>
         </ul>
       </div>
 
