Add FAQ about contacting me

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -13,6 +13,9 @@
               >radon@intuitiveexplanations.com</a
             >
           </li>
+          <li>
+            <a href="/about/contacting">How to contact me</a>
+          </li>
         </ul>
       </div>
 
