Move from Fathom Analytics to Umami
Even more privacy oriented.

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -41,8 +41,8 @@
 
 {% if env.ENABLE_ANALYTICS %}
 <script
-  src="https://cdn.usefathom.com/script.js"
-  site="OPNDVMZW"
   defer
+  src="https://umami.intuitiveexplanations.com/script.js"
+  data-website-id="9fb3df9f-7969-4d08-9a29-a766cc97a7f4"
 ></script>
 {% endif %}
